load("@rules_rust//rust:defs.bzl", "rust_binary", "rust_library", "rust_test")
load("@io_bazel_rules_docker//rust:image.bzl", "rust_image")

sh_binary(
    name = "commit",
    srcs = ["scripts/bazel_commit.sh"],
    visibility = ["//visibility:public"],
)

rust_library(
    name = "matching-engine-lib",
    srcs = ["src/matching_engine.rs"],
    edition = "2021",
)

rust_binary(
    name = "matching-engine",
    srcs = ["src/main.rs"],
    deps = [":matching-engine-lib"],
    edition = "2021",
)

rust_test(
    name = "matching-engine-test",
    crate = ":matching-engine-lib",
)

rust_image(
    name = "image",
    binary = ":matching-engine",
    visibility = ["//visibility:public"],
)


